# power-meter

./: Cargo.toml  Makefile  README  rust-toolchain-riscv.toml  rust-toolchain-xtensa.toml  rust-toolchain.toml  trouble-git.txt
.cargo/: config.toml
examples/: encoder.rs  encoder_pcnt.rs  encoder_pcnt_counter.rs
src/: ble.rs  ble_task.rs  c6_lcd.rs  encoder.rs  encoder_pcnt.rs  format_mac.rs  ina219.rs  lcd.rs  lib.rs  main.rs  wdt.rs
utils/: ina219_config.html  ina219_reading.html  power_meter.decode  read_meter.sh  sse-stream.sh
