[package]
edition      = "2024"
name         = "power_monitor"
rust-version = "1.88"
version      = "0.1.0"

[lib]
harness = false

[[bin]]
name = "power_monitor"
path = "src/bin/power_monitor/main.rs"
harness = false

[features]
default = ["esp32c6"]
esp32c6 = [
    "esp-hal/esp32c6",
    "esp-bootloader-esp-idf/esp32c6",
    "esp-alloc/esp32c6",
    "esp-rtos/esp32c6",
    "esp-radio/esp32c6",
    "esp-sync/esp32c6",
]


[dependencies]
esp-hal = { version = "~1.1.0", features = ["defmt", "unstable"] }
esp-bootloader-esp-idf = { version = "0.5.0", features = ["defmt",] }
esp-rtos = { version = "0.3.0", features = [ "defmt", "embassy", "esp-alloc", "esp-radio"] }
esp-alloc = { version = "0.10.0", features = ["defmt"] }
esp-radio = { version = "0.18.0", features = [ "ble", "defmt", "esp-alloc", "unstable"] }
esp-sync = { version = "0.2.1", features = ["defmt"] }

embassy-executor = { version = "0.10.0", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
embassy-futures = { version = "0.1.2", features = ["defmt"] }

# Need to use embassy-sync 0.7 & embassy-sync 0.7 to avoid issues with trouble 0.6
embassy-embedded-hal = { version = "0.5.0", features = ["defmt"] }
embassy-sync = { version = "0.7", features = ["defmt"] }

embedded-io = { version = "0.7.1", features = ["defmt"] }
embedded-io-async = { version = "0.7.0", features = ["defmt"] }
embedded-hal-async = { version = "1.0.0", features = ["defmt-03"] }

critical-section = "1.2.0"
static_cell      = "2.1.1"
panic-rtt-target = { version = "0.2.0", features = ["defmt"] }
rtt-target = { version = "0.6.2", features = ["defmt"] }
defmt = { version = "1.0.1" }

trouble-host = { version = "0.6.0", features = ["gatt"] }
bt-hci = "0.8.0"
embedded-graphics = "0.8.2"
lcd-async = "0.1.3"
profont = "0.7.0"
heapless = { version = "0.9.3", features = ["defmt"] }
portable-atomic = "1.13.1"

# For fine tuning these settings, please refer to https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
# The default debug profile is too slow and too big for resource-constrained devices.
# Always build with some optimizations enabled.
opt-level = "s"

[profile.release]
codegen-units = 1     # LLVM can perform better optimizations using a single thread
debug         = 2     # prefer slower builds but better debugging experience
lto           = 'fat'
opt-level     = 's'

